log
Sat 11 May 2024 09:11:52 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
5c80269
Sat 11 May 2024 09:15:21 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
45cc308
Sat 11 May 2024 09:19:23 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:5: error: expected expression before ‘}’ token
   81 |     }
      |     ^
Compilation failed
67f89bb
Sat 11 May 2024 09:22:42 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
1417a6c
Sat 11 May 2024 09:51:51 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent= NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a02ae07
Sat 11 May 2024 09:53:22 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent= NULL, * node = tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e8cf5c0
Sat 11 May 2024 09:53:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:9: error: ‘parent’ undeclared (first use in this function)
   54 |         parent = node;
      |         ^~~~~~
treemap.c:54:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f9953bd
Sat 11 May 2024 09:54:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent = NULL, * node= tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bcf5886
Sat 11 May 2024 10:11:42 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   56 |     TreeNode * parent = NULL, * node= tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e67f399
Sat 11 May 2024 10:12:10 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |     TreeNode * parent = NULL, * node= tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c60e401
Sat 11 May 2024 10:13:56 PM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
65fb31b
Sat 11 May 2024 10:16:18 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
91dbf34
Sat 11 May 2024 10:22:34 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:5: error: expected expression before ‘}’ token
  103 |     }
      |     ^
Compilation failed
4227954
Sat 11 May 2024 10:23:23 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|4
total_score: 35/70
876e02c
Sat 11 May 2024 10:24:22 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:106:7: error: expected identifier or ‘(’ before ‘else’
  106 |     } else {
      |       ^~~~
treemap.c:113:1: error: expected identifier or ‘(’ before ‘}’ token
  113 | }
      | ^
Compilation failed
96af2b0
Sat 11 May 2024 10:25:38 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
19a2870
Sat 11 May 2024 10:28:35 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
fb34165
Sat 11 May 2024 10:38:40 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
0dc0287
Sat 11 May 2024 10:49:41 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:150:51: error: expected ‘)’ before ‘{’ token
  150 |         if(!tree->lower_than(key, node->pair->key){
      |           ~                                       ^
      |                                                   )
treemap.c:150:9: note: ‘-Wmisleading-indentation’ is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
  150 |         if(!tree->lower_than(key, node->pair->key){
      |         ^~
treemap.c:150:9: note: adding ‘-flarge-source-files’ will allow for more column-tracking support, at the expense of compilation time and memory
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606:1: error: expected declaration or statement at end of input
In file included from test.c:4:
treemap.c:148:16: error: unused variable ‘ub’ [-Werror=unused-variable]
  148 |     TreeNode * ub= NULL;
      |                ^~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
e431e7b
Sat 11 May 2024 10:52:42 PM UTC: 
 treemap.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c:169:1: error: expected identifier or ‘(’ before ‘}’ token
  169 | }
      | ^
Compilation failed
8a6841f
